# jobsuche

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_ISSUES.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  rivet.yaml  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: api-smoke-test.yml  mutants.yml  rust.yml
artifacts/: cybersecurity-design.yaml  cybersecurity-verification.yaml  cybersecurity.yaml  design-decisions.yaml  requirements.yaml  stpa.yaml
docs/: getting-started.md  openapi.yaml
docs/superpowers/plans/: 2026-03-27-api-schema-validation.md
docs/superpowers/specs/: 2026-03-27-api-schema-validation-design.md
examples/: advanced_filters.rs  async_search.rs  async_stream.rs  basic_search.rs  investigate_pagination.rs  test_api_mapping.rs  test_facets.rs  test_pagination_limit.rs  test_search_mapping.rs
src/: async_client.rs  builder.rs  core.rs  errors.rs  lib.rs  pagination.rs  rep.rs  search.rs  sync.rs
tests/: api_contract_tests.rs  api_schema_validation.rs  async_mock_tests.rs  integration_test.rs  mock_tests.rs  proptest_tests.rs
tests/fixtures/: api-schema-baseline.json
